--- a/material/oliveira.bib
+++ b/material/oliveira.bib
@@ -6,7 +6,26 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@inproceedings{Butz:2019_3,
+	Author = {C.J. Butz, A. dos Santos, J.S. Oliveira, and A.L. Madsen},
+	Booktitle = {Thirty-second Canadian Conference on Artificial Intelligence (AI)},
+	Pages = {42--54},
+	Title = {Exploiting Symmetry of Independence in d-Separation},
+	Year = {2019}}
 
+@inproceedings{Butz:2019_2,
+	Author = {A.L. Madsen, C.J. Butz, J.S. Oliveira, and A. dos Santos},
+	Booktitle = {Thirty-second Canadian Conference on Artificial Intelligence (AI)},
+	Pages = {68--79},
+	Title = {Solving Influence Diagrams with Simple Propagation},
+	Year = {2019}}
+
+@inproceedings{Butz:2019_1,
+	Author = {C.J. Butz and A.L. Teixeira and J.S. Oliveira and and A. dos Santos},
+	Booktitle = {Thirty-Second International Florida Artificial Intelligence Research Society Conference (FLAIRS)},
+	Pages = {500--503},
+	Title = {On the Tree Structure of Deep Convolutional Sum-Product Networks},
+	Year = {2019}}
 
 @article{Butz:2018_2,
 	Author = {Butz, C.J. and Oliveira, J.S. and dos Santos, A. and Madsen, A.L.},
